	* Implemented zfs send/recv.
	* Turned zfs-fuse into a real daemon (Cameron Patrick, Bryan Donlan).
Bug fixes:
	* Fix crash when using 'zpool status -v' to list errors.
	* Allow suid files and device nodes to be stored on zfs (Cameron Patrick).
	* Fix segfault when trying to run as non-root (Ming Zhang).
	* Linux compatibility fix when trying to remove non-empty directory.

2007/03/06 - Release 0.4.0_beta1
--------------------------------------------------
Features:
	* Updated ZFS code to Nevada build 56
Enhancements:
	* Added multithreaded event loop
	* Added LSB compliant init.d script to contrib/ directory (contributed by Dietmar Scharf).
Bug fixes:
	* Bug #9833 - Cannot execute binaries inside ZFS filesystems.
	* Bug #9834 - Terminating zfs-fuse didn't unmount filesystems.
	* Bug #9835 - zfs-fuse would exit when killing zfs or zpool with ctrl-c.
	* Bug #9838 - zfs-fuse memory usage would grow almost indefinitely.
	* Bug #9841 - zpool export fails with -f force option. Bug reported and fixed by philwozza.
	* Bug #10071 - Cannot copy write protected file.
	* Bug #10101 - zfs-fuse in trunk asserts() in Bonnie++ rewrite test.
	* Bug #10174 - fsstress from ltp crashes zfs-fuse.
	* Fixed bug where opened read-only files couldn't be ftruncated() (fixes IOzone sanity check).
	* Fixed bug where files bigger than 2 GB couldn't be opened on 64-bit platforms.
	* Fixed crash/segfault after interrupting user processes with CTRL-C.
	* Fixed crash when detaching a spare device.
	* Fixed compilation error on CentOS 4.4 (reported by Leroy van Logchem).
	* 'zfs umount /path/to/mntpoint' didn't work.
	* Fixed stray /dev/dsk errors.
	* Marked stack as non-executable. Found and fixed by Phil Worral (philwozza).
	* Fixed assertion failure due to timer overflow problem on 32-bit machines with high uptimes.

2006/12/26 - Release 0.4.0_alpha1
--------------------------------------------------
Features:
	* Updated ZFS code to Nevada build 53
	* Enabled write support for ZFS filesystems
